Dark mode fixed

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -8,9 +8,6 @@ header.header {
     .title {
         h1 {
             margin: 0;
-            @include dark-mode {
-                color: $white-Text;
-            }
         }
         p {
             margin-top: .8rem;
@@ -21,9 +18,6 @@ header.header {
             @include mq-desktop {
                 border: none;
                 padding-bottom: 0;
-            }
-            @include dark-mode {
-                color: #b3b3b3;
             }
         }
     }
@@ -41,9 +35,6 @@ header.header {
             padding-right: 2rem;
             @include mq-desktop {
                 margin-top: 0;
-            }
-            @include dark-mode {
-                color: #b3b3b3;
             }
         }
         .toggle-btn {
@@ -69,9 +60,7 @@ header.header {
                 height: 36px;
                 padding: 3px;
                 user-select: none;
-                @include dark-mode {
-                    background-image: linear-gradient(to right, hsl(210, 78%, 56%) 0%, hsl(146, 68%, 55%) 100%);
-                }
+                cursor: pointer;
                 &:before {
                     content: "";
                     display: block;
@@ -82,9 +71,6 @@ header.header {
                     transform: translateX(40px);
                     transition: .3s;
                     will-change: transform;
-                    @include dark-mode {
-                        background: $very-Dark-Blue-BG;
-                    }
                 }
             }
         }
