--- a/src/sass/_section-followers.scss
+++ b/src/sass/_section-followers.scss
@@ -10,8 +10,9 @@ section.section-followers {
         margin-bottom: 2rem;
         border-radius: .5rem;
         background-color: $very-Pale-Blue-Top-BG-Pattern;
-        @include dark-mode {
-            background-color: $dark-Desaturated-Blue-Card-BG;
+        transition: background-color .5s ease;
+        &:hover {
+            background-color: hsl(227, 9%, 80%);
         }
         &.border-fb {
             border-top: 5px solid $facebook;
@@ -43,9 +44,6 @@ section.section-followers {
         p.num-follows {
             font-size: 5rem;
             font-weight: 700;
-            @include dark-mode {
-                color: $white-Text;
-            }
         }
         p.text {
             padding-top: .5rem;
